Fixed padding for footer so that there is no gap below it

--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,7 @@ footer {
   bottom: 0;
   z-index: 0;
 
-  padding-bottom: 12px;
+  padding-bottom: 15px;
 
   background-color: rgba(0, 0, 0, 0.6);
 }
